# aurora-gui

./: .gitignore  Cargo.toml  Cross.toml  README.md  aarch64_build.sh  arm_build.sh
aurora_app/: Cargo.toml  README.md
aurora_app/src/: lib.rs  q_variant_compat.rs  types.rs  window.rs
aurora_egui/: Cargo.toml  README.md
aurora_egui/src/: app.rs  config.rs  error.rs  fonts.rs  frame.rs  gl_context.rs  lib.rs
aurora_egui/src/cover/: mod.rs
aurora_egui/src/runner/: ime.rs  lifecycle.rs  mod.rs  renderer.rs  rotation.rs
demo/: Cargo.toml  README.md
demo/src/: main.rs
rpm/: com.lmaxyz.egui_aurora_app.desktop
src/: app.rs  config.rs  error.rs  frame.rs  gl_context.rs  lib.rs  main.rs  runner.rs  types.rs  ui.rs
src/cover/: mod.rs
src/platform/: mod.rs  q_variant.rs  services.rs
