[workspace]
members = ["aurora_app", "aurora_services", "aurora_egui", "demo"]
resolver = "2"

[patch.crates-io]
winit = { git = "https://github.com/lmaxyz/winit", branch = "rm_maliit" }
glutin = { git = "https://github.com/lmaxyz/glutin", branch = "aurora_device_fix" }
egui-winit = { git = "https://github.com/lmaxyz/egui/", branch = "more_flexible_egui-winit" }
