[package]
name = "aurora_app"
description = "Aurora OS window property helpers for winit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
winit = { workspace = true, default-features = true, features = ["wayland"] }
maliit = { workspace = true }
log = { workspace = true }
