[package]
name = "aurora_egui"
description = "Library for building egui apps on Aurora OS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
winit = { workspace = true, default-features = false, features = ["wayland", "wayland-dlopen", "rwh_06"] }
aurora_services = { workspace = true }
aurora_app = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
glow = { workspace = true }
egui = { workspace = true }
egui_glow = { workspace = true }
egui-rotate = { workspace = true }
egui-winit = { workspace = true }
fontdb = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[patch.crates-io]
winit = { git = "https://github.com/lmaxyz/winit", branch = "rm_maliit" }
glutin = { git = "https://github.com/lmaxyz/glutin", branch = "aurora_device_fix" }
egui-winit = { git = "https://github.com/lmaxyz/egui/", branch = "more_flexible_egui-winit" }
