[package]
name = "demo"
version = "0.1.0"
edition = "2024"
description = "Demo application for aurora_egui"
authors = ["Maksim Leiman <maximleyman@yandex.ru>"]
license = "Apache 2.0"

[dependencies]
aurora_egui = { path = "../aurora_egui" }
aurora_services = { path = "../../aurora_services" }
egui = "0.34.2"
env_logger = "0.11"
log = "0.4"

[package.metadata.generate-rpm]
name = "com.lmaxyz.egui_aurora_app"
summary = "Example with platform specific aurora os window creation"
release = "1"
assets = [
    { source = "target/release/demo", dest = "/usr/bin/com.lmaxyz.egui_aurora_app", mode = "755" },
    { source = "rpm/com.lmaxyz.egui_aurora_app.desktop", dest = "/usr/share/applications/com.lmaxyz.egui_aurora_app.desktop", mode = "644" },
    { source = "rpm/icons/86x86/com.lmaxyz.egui_aurora_app.png", dest = "/usr/share/icons/hicolor/86x86/apps/com.lmaxyz.egui_aurora_app.png", mode = "644" },
    { source = "rpm/icons/108x108/com.lmaxyz.egui_aurora_app.png", dest = "/usr/share/icons/hicolor/108x108/apps/com.lmaxyz.egui_aurora_app.png", mode = "644" },
    { source = "rpm/icons/128x128/com.lmaxyz.egui_aurora_app.png", dest = "/usr/share/icons/hicolor/128x128/apps/com.lmaxyz.egui_aurora_app.png", mode = "644" },
    { source = "rpm/icons/172x172/com.lmaxyz.egui_aurora_app.png", dest = "/usr/share/icons/hicolor/172x172/apps/com.lmaxyz.egui_aurora_app.png", mode = "644" },
]
